--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,271 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* <-------------------------nav bar-----------------------------> */
+li {
+	list-style-type: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+	text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-main {
+	display: flex;
+	justify-content: space-around;
+	min-height: 10vh;
+	align-items: center;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #191919;
+	color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav .logo {
+	font-size: 22px;
+	font-weight: 700;
+	text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav .nav-links {
+	display: flex;
+	justify-content: space-around;
+	width: 35%;
 }
+
+nav .nav-links a {
+	font-size: 18px;
+	font-weight: normal;
+	cursor: pointer;
+}
+
+nav .nav-btns {
+	font-size: 18px;
+	font-weight: normal;
+	cursor: pointer;
+	border: none;
+	background: none;
+	color: #fff;
+}
+
+nav .nav-links a:hover {
+	border-bottom: 1px solid #fff;
+}
+
+nav .nav-btns:hover {
+	border-bottom: 1px solid #fff;
+}
+
+nav .burger {
+	font-size: 28px;
+	display: none;
+	cursor: pointer;
+}
+
+@media all and (max-width: 900px) {
+	nav .burger {
+		display: block;
+	}
+
+	nav .nav-links {
+		position: absolute;
+		display: block;
+		top: 0;
+		left: 0;
+		height: 100vh;
+		background-color: #262626;
+		padding: 40px;
+		width: 40%;
+		transform: translateX(-500px);
+		transition: 0.4s ease-in-out;
+	}
+
+	nav .nav-links li {
+		padding: 25px;
+		border-bottom: 1px solid #ccc;
+	}
+
+	nav .nav-links li:last-of-type {
+		border-bottom: 0px solid #ccc;
+	}
+
+	nav .nav-links a:hover {
+		border-bottom: 0px solid #fff;
+	}
+}
+/*<-------------------------nav bar-----------------------------> */
+
+/*<-------------------------Home-----------------------------> */
+.home-container {
+	background-image: url('photos/lake.jpg');
+	height: 30rem;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 3rem;
+}
+
+.home-underline {
+	border-color: white;
+	width: 100%;
+}
+
+#home-h3 {
+	margin-left: 1.3rem;
+}
+
+/*<-------------------------Home-----------------------------> */
+
+/*<-------------------------About-----------------------------> */
+
+.about-container {
+	margin-top: 1.8rem;
+}
+
+#about-h1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#about-p {
+	color: red;
+	width: 60%;
+	margin-left: 20rem;
+}
+
+
+
+/*<-------------------------About-----------------------------> */
+
+/*<-------------------------Project Cards-----------------------------> */
+
+.project-container {
+	margin-top: 1.8rem;
+}
+
+#project-h1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 1.8rem;
+}
+
+.project-cards {
+	display: flex;
+	justify-content: space-around;
+}
+
+.project-card-one {
+	width: 50vh;
+	height: 40vh;
+	border: 1px solid black;
+	background-color: white;
+}
+
+.card-background-one {
+	background-image: url('photos/spanish-cards.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 80%;
+	width: 100%;
+}
+
+.project-card-two {
+	width: 50vh;
+	height: 40vh;
+	border: 1px solid black;
+	background-color: white;
+}
+
+.card-background-two{
+	background-image: url('photos/trending-news.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 80%;
+	width: 100%;
+}
+
+.project-card-three {
+	width: 50vh;
+	height: 40vh;
+	border: 1px solid black;
+	background-color: white;
+}
+
+.card-background-three{
+	background-image: url('photos/orange.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 80%;
+	width: 100%;
+}
+
+.card-btns {
+	display: flex;
+	justify-content: space-around;
+}
+
+.project-github-btn {
+	background-color: black;
+	border-radius: 2px;
+	color: white;
+	text-decoration: none;
+	border: none;
+	padding: 15px 32px;
+}
+
+.project-live-btn {
+	background-color: black;
+	border-radius: 2px;
+	color: white;
+	text-decoration: none;
+	border: none;
+	padding: 15px 32px;
+}
+/*<-------------------------Project Cards-----------------------------> */
+
+/*<-------------------------Contact-----------------------------> */
+.contact-container {
+	margin-top: 1.8rem;
+}
+
+.contact-h1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.contact-info {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.contact-logo {
+	width: 9vh;
+	height: 8vh;
+	padding-right: 1rem;
+}
+
+#linkedin {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+}
+
+#email {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+}
+
+#phone {
+	display: flex;
+	align-items: center;
+}
+/*<-------------------------Contact-----------------------------> */
