--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 * {
 	margin: 0;
 	padding: 0;
@@ -151,6 +152,7 @@ nav .burger {
 	display: flex;
 	justify-content: space-around;
 	font-size: 1.8rem;
+	font-family: 'Handlee', cursive;
 }
 
 
