--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kosugi&family=Megrim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -26,7 +29,7 @@ a {
 	align-items: center;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #232126;
-	color:#D9B448;
+	color:#BFBDBF;
 }
 
 nav .logo {
@@ -53,7 +56,7 @@ nav .nav-btns {
 	cursor: pointer;
 	border: none;
 	background: none;
-	color: #D9B448;
+	color: #BFBDBF;
 }
 
 nav .nav-links a:hover {
@@ -106,16 +109,17 @@ nav .burger {
 /*<-------------------------Home-----------------------------> */
 .home-container {
 	background-color: #232126;
-	height: 30rem;
-	color: #D9B448;
+	height: 100vh;
+	color: #BF1523;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 3rem;
+	font-family: 'Megrim', cursive;
 }
 
 .home-underline {
-	border-color: white;
+	border-color: #BFBDBF;
 	width: 100%;
 }
 
@@ -129,15 +133,16 @@ nav .burger {
 
 .about-container {
 	background-color: #232126;
+	height: 60vh;
 }
 
 #about-h1 {
-	color: #D9B448;
+	color: #BFBDBF;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 3.3rem;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-family: 'Barlow Condensed', sans-serif;
 	padding-bottom: .5rem;
 }
 
@@ -148,12 +153,12 @@ nav .burger {
 }
 
 #about-p {
-	color: #D9B448;
-	width: 60%;
+	color: #BF1523;
+	width: 65%;
 	display: flex;
 	justify-content: space-around;
 	font-size: 1.8rem;
-	font-family: 'Handlee', cursive;
+	font-family: 'Kosugi', sans-serif;
 }
 
 
@@ -164,6 +169,7 @@ nav .burger {
 
 .project-container {
 	background-color: #232126;
+	height: 80vh;
 }
 
 #project-h1 {
@@ -172,7 +178,8 @@ nav .burger {
 	align-items: center;
 	margin-bottom: 1.8rem;
 	font-size: 3.3rem;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-family: 'Barlow Condensed', sans-serif;
+	color: #BFBDBF;
 }
 
 .project-cards {
@@ -252,6 +259,7 @@ nav .burger {
 /*<-------------------------Contact-----------------------------> */
 .contact-container {
 	background-color: #232126;
+	color: #BFBDBF;
 }
 
 .contact-h1 {
@@ -259,7 +267,9 @@ nav .burger {
 	justify-content: center;
 	align-items: center;
 	font-size: 3.3rem;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-family: 'Barlow Condensed', sans-serif;
+	color: #BFBDBF;
+	padding-bottom: 2rem;
 }
 
 .contact-info {
@@ -278,14 +288,12 @@ nav .burger {
 	display: flex;
 	align-items: center;
 	text-decoration: none;
-	color: black;
 }
 
 #email {
 	display: flex;
 	align-items: center;
 	text-decoration: none;
-	color: black;
 }
 
 #phone {
